--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -1,11 +1,17 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1> This is a login page </h1>
-    <p> {{ name }}</p>
-    {% if boolean %}
-        Yes, it is true
-    {% else %}
-        Is is false
-    {% endif %}
+    <form method="POST">
+        <h3 align="center"> Log in </h3>
+        <div class="form-group">
+            <label for="email"> Email Address </label>
+            <input type="email" class="form-control" id="email" name="email" placeholder="Enter email">
+        </div>
+        <div class="form-group">
+            <label for="password"> First Name </label>
+            <input type="password" class="form-control" id="password" name="password" placeholder="Enter a password">
+        </div>
+        <br/>
+        <button type="submit" class="btn btn-primary">Login</button>
+    </form>
 {% endblock %}
